style: fixed page-content overflow on footer

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -23,8 +23,8 @@
 .fixed {
   justify-content: flex-start;
   position: fixed;
-  z-index: 999;
-  height: 96.8px;
+  z-index: 1001;
+  height: 40px;
 }
 
 .fixed > .header-content > .header-links {
@@ -76,6 +76,10 @@
   /* box-shadow: 0 3px 10px -3px rgb(0 0 0 / 30%); */
 }
 
+.fixed ~ .main-content > .page-content-container > .page-sections-wrapper {
+  padding-top: 17rem;
+}
+
 .fixed ~ .main-content > .page-content-container > .form-container {
   position: fixed;
   z-index: 999;
@@ -84,14 +88,14 @@
 }
 
 .fixed ~ .main-content > .page-content-container > .form-container > #cnpj-form  {
-  padding-top: 100px;
+  padding-top: 97px;
   height: 96.8px;
   
 }
 
 .fixed ~ .main-content > .page-content-container > .form-container > #cnpj-form > .cnpj-input-container {
   position: relative;
-  top: -35px;
+  top: -31px;
 }
 
 .fixed ~ .main-content > .page-content-container > .form-container > #cnpj-form > .cnpj-input-container > .cnpj-input-title{
@@ -291,10 +295,8 @@ input::-webkit-inner-spin-button {
   align-items: center;
   flex-direction: column;
   width: 100%;
-
-  position: relative;
-  top: 5rem;
-  padding-top: 5rem;
+  padding-top: 10.2rem;
+  padding-bottom: 5rem;
 }
 
 .page-content {
@@ -357,9 +359,7 @@ input::-webkit-inner-spin-button {
 }
 
 .data-container {
-  position: relative;
-  top: 5rem;
-  margin: 5rem 0;
+  margin: 10.2rem 0;
   min-height: 12rem;
   width: 71%;
   background-color: white;
@@ -610,10 +610,6 @@ footer {
 }
 
 @media only screen and (max-width: 737px) {
-  .page-sections-wrapper {
-    top: 3.3rem;
-  }
-
   .input-container {
     width: 93.5%;
   }
